DigicielFull/force-app/main/default/objects/Legacy_Record__c/Legacy_Record__c.object-meta.xml
<CustomObject>
    <description>This object is used to define Legacy Records from historic Salesforce Orgs that have been merged with the Digicel Group organisation.</description>
    <label>Legacy Record</label>
    <nameField>
        <label>Legacy Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>