DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>Account__r.Legacy_Account_ID__c</formula>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>