DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <inlineHelpText>Customer eight-digit Account Number</inlineHelpText>
    <label>AccountCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>