DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>Note: This is the value copied in from the Open Order table. The Master-Detail up to Account.Name is the actual account name. But it can be checked against this text value.</description>
    <inlineHelpText>Company or Individual Account Holder Name</inlineHelpText>
    <label>AccountName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>