DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/Component_Code__c.field-meta.xml
<CustomField>
    <fullName>Component_Code__c</fullName>
    <label>Component Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>