DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/ComponentClass__c.field-meta.xml
<CustomField>
    <fullName>ComponentClass__c</fullName>
    <label>ComponentClass</label>
    <length>50</length>
    <type>Text</type>
</CustomField>