DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>DID/DOD Service</fullName>
            </value>
            <value>
                <fullName>Business Phone</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Business Phone With DSL</fullName>
            </value>
            <value>
                <fullName>DID Services</fullName>
            </value>
            <value>
                <fullName>Voice Channel</fullName>
            </value>
            <value>
                <fullName>Business Centrex</fullName>
            </value>
            <value>
                <fullName>ISDN Service</fullName>
            </value>
            <value>
                <fullName>Residential Phone Service</fullName>
            </value>
            <value>
                <fullName>Residential Phone With DSL Service</fullName>
            </value>
            <value>
                <fullName>Residential Smart Ring</fullName>
            </value>
            <value>
                <fullName>Business Smart Ring</fullName>
            </value>
            <value>
                <fullName>Telco Phone</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>