DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <label>CreateDate(BTC)</label>
    <type>Date</type>
</CustomField>