DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/CustomerConcurredRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerConcurredRequestDate__c</fullName>
    <label>CustomerConcurredRequestDate</label>
    <type>Date</type>
</CustomField>