DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/Days_Age__c.field-meta.xml
<CustomField>
    <fullName>Days_Age__c</fullName>
    <label>Days Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>