DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <label>IssueDate</label>
    <type>Date</type>
</CustomField>