DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>