DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/NodeReadyDate__c.field-meta.xml
<CustomField>
    <fullName>NodeReadyDate__c</fullName>
    <label>NodeReadyDate</label>
    <type>Date</type>
</CustomField>