DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/OrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDueDate__c</fullName>
    <inlineHelpText>Reservation Date for Service Order</inlineHelpText>
    <label>OrderDueDate</label>
    <type>Date</type>
</CustomField>