DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/Parish__c.field-meta.xml
<CustomField>
    <fullName>Parish__c</fullName>
    <label>Parish</label>
    <length>50</length>
    <type>Text</type>
</CustomField>