DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/ReportedTrouble__c.field-meta.xml
<CustomField>
    <fullName>ReportedTrouble__c</fullName>
    <label>ReportedTrouble</label>
    <length>100</length>
    <type>Text</type>
</CustomField>