DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/Service_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Phone__c</fullName>
    <label>Service Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>