DigicielFull/force-app/main/default/objects/Legacy_Record__c/fields/WorkGroup__c.field-meta.xml
<CustomField>
    <fullName>WorkGroup__c</fullName>
    <label>WorkGroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>