DigicielFull/force-app/main/default/objects/Legacy_Record__c/recordTypes/BTC_Open_Faults.recordType-meta.xml
<RecordType>
    <fullName>BTC_Open_Faults</fullName>
    <active>true</active>
    <label>BTC Open Faults</label>
</RecordType>