DigicielFull/force-app/main/default/objects/Legacy_Record__c/recordTypes/BTC_Open_Orders.recordType-meta.xml
<RecordType>
    <fullName>BTC_Open_Orders</fullName>
    <active>true</active>
    <label>BTC Open Orders</label>
</RecordType>