DigicielFull/force-app/main/default/objects/Legacy_Record__c/recordTypes/BTC_Service_Phones.recordType-meta.xml
<RecordType>
    <fullName>BTC_Service_Phones</fullName>
    <active>true</active>
    <label>BTC Service Phones</label>
</RecordType>