DigicielFull/force-app/main/default/objects/Legacy_Record__c/recordTypes/Diaspora_Top_Up_Account_Phone_Numbers.recordType-meta.xml
<RecordType>
    <fullName>Diaspora_Top_Up_Account_Phone_Numbers</fullName>
    <active>true</active>
    <description>These legacy records were transferred from the Diaspora org in June 2018</description>
    <label>Diaspora - Top-Up Account Phone Numbers</label>
</RecordType>